force-app/main/default/objects/Swapping_Classes__c/Swapping_Classes__c.object-meta.xml
<CustomObject>
    <label>Swapping Classes</label>
    <nameField>
        <displayFormat>SW-{00000}</displayFormat>
        <label>Swapping Classes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swapping Classess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>