force-app/main/default/objects/Swapping_Classes__c/fields/From_Class__c.field-meta.xml
<CustomField>
    <fullName>From_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Class</label>
    <referenceTo>hed__Course_Offering_Schedule__c</referenceTo>
    <relationshipLabel>Swapping Classess</relationshipLabel>
    <relationshipName>Swapping_Classess</relationshipName>
    <type>Lookup</type>
</CustomField>