force-app/main/default/objects/Swapping_Classes__c/fields/From_class_ID__c.field-meta.xml
<CustomField>
    <fullName>From_class_ID__c</fullName>
    <label>From class ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>