force-app/main/default/objects/Swapping_Classes__c/fields/From_COS_ID__c.field-meta.xml
<CustomField>
    <fullName>From_COS_ID__c</fullName>
    <description>From - Course Offering Schedule ID</description>
    <label>From COS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>