force-app/main/default/objects/Swapping_Classes__c/fields/From_Time__c.field-meta.xml
<CustomField>
    <fullName>From_Time__c</fullName>
    <formula>TEXT(From_Class__r.hed__Start_Time__c) &amp; &quot;-&quot; &amp; TEXT(From_Class__r.hed__End_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Time</label>
    <type>Text</type>
</CustomField>