force-app/main/default/objects/Swapping_Classes__c/fields/To_Class__c.field-meta.xml
<CustomField>
    <fullName>To_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Class</label>
    <referenceTo>hed__Course_Offering_Schedule__c</referenceTo>
    <relationshipLabel>Swapping Classess (To Class)</relationshipLabel>
    <relationshipName>Swapping_Classess1</relationshipName>
    <type>Lookup</type>
</CustomField>