force-app/main/default/objects/Swapping_Classes__c/fields/To_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>To_Class_ID__c</fullName>
    <label>To Class ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>