force-app/main/default/objects/Swapping_Classes__c/fields/To_COS_ID__c.field-meta.xml
<CustomField>
    <fullName>To_COS_ID__c</fullName>
    <description>To - Course Offering Schedule ID</description>
    <label>To COS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>