force-app/main/default/objects/Swapping_Classes__c/fields/To_Time__c.field-meta.xml
<CustomField>
    <fullName>To_Time__c</fullName>
    <formula>TEXT( To_Class__r.hed__Start_Time__c ) &amp; &quot;-&quot; &amp; TEXT( To_Class__r.hed__End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Time</label>
    <type>Text</type>
</CustomField>